--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,16 @@ DefaultContentLanguage = "en"
   cover_dimming_class = "cover-bg-red"
   background_color_class = "bg-white"
 
+
+[[params.ananke_socials]]
+    name = "instagram"
+    url = "https://www.instagram.com/aauy.uofc/" 
+
+[[params.ananke_socials]]
+    name = "linkedin"
+    url ="https://www.linkedin.com/company/ask-an-upper-year/"
+
+
 [languages]
   [languages.en]
     title = "AAUY"
