--- a/config.toml
+++ b/config.toml
@@ -35,11 +35,11 @@ DefaultContentLanguage = "en"
     [[menu.main]]
         name = "About Us"
         url = "/about/single/"
-        weight = 2
-    [[menu.main]]
-        name = "Question Blog"
-        url = "/faq/"
         weight = 3
+    [[menu.main]]
+        name = "Opportunities"
+        url = "/opp/"
+        weight = 2
     [[menu.main]]
         name = "Contact Us"
         url = "/contact/"
