--- a/config.toml
+++ b/config.toml
@@ -38,7 +38,7 @@ DefaultContentLanguage = "en"
         weight = 3
     [[menu.main]]
         name = "Opportunities"
-        url = "/opp/"
+        url = "/opp/single"
         weight = 2
     [[menu.main]]
         name = "Contact Us"
